Add working language support for small subset for keywords

--- a/language-configuration.json
+++ b/language-configuration.json
@@ -23,7 +23,13 @@
         ["[", "]"],
         ["(", ")"],
         ["\"", "\""],
-        ["'", "'"],
-        ["AttributeBegin", "AttributeEnd"]
-    ]
+        ["'", "'"]
+    ],
+    "folding": {
+        "markers": {
+          "start": "^\\s*(.*Begin)\\b",
+          "end": "^\\s*(.*End)\\b"
+        }
+    },
+
 }
